Sat Nov  5 17:18:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/-test/file/fs.c (get_atime_p): Updating of file access times
	  is enabled or not.

Sat Nov  5 16:28:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (extract_getline_opts): extract chomp option.
	  [Feature #12553]

Sat Nov  5 15:58:24 2016  Sho Hashimoto  <sho-h@netlab.jp>

	* tool/mkconfig.rb: [DOC] add rbconfig documentation.

Sat Nov  5 15:42:52 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/smtp.rb (tlsconnect): support timeout for TLS handshake.
	  [ruby-core:76893] [Bug #12678]

	* lib/net/protocol.rb (ssl_socket_connect): new method to implement
	  timeout for TLS handshake.

	* lib/net/http.rb (connect): use Net::Protocol#ssl_socket_connect.

Sat Nov  5 14:17:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (brace_body, do_body): since cmdarg_stack is saved in
	  VALUE val, should restore from the same member.  on big-endian
	  platforms where VALUE is larger than int, it restored 0 in the
	  upper word.  [ruby-core:77920] [Bug #12900]

Sat Nov  5 13:52:52 2016  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb (Shellwords#shellsplit): Fix the handling of
	  the backslash in double quotes to conform to the standard.
	  [ruby-core:63807] [Bug #10055]

Sat Nov  5 12:14:31 2016  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (Pathname#empty?): New method.
	  [ruby-core:76404] [Feature#12596] Proposed by John Backus.

Sat Nov  5 11:53:02 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb (test_refine_alias_in_subclass):
	  add a test to check that alias in subclasses can be refined.
	  [ruby-core:69374] [Bug #11186]

Sat Nov  5 11:20:57 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* cont.c (cont_new): disable optimization if clang's version is
	  3.8.0.  [ruby-core:77894] [Bug #12893]

Sat Nov  5 10:07:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_file.rb (TestFile#test_stat): fix noatime case.