@@ -1,3 +1,9 @@
+Sat Nov  5 17:29:06 2016  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb (Resolv::DNS#extract_resources): Use each_resource
+	  instead of each_answer.
+	  [ruby-core:75461] [Bug#12372] reported by Rafael Fernandez Lopez.
+
 Sat Nov  5 17:18:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/-test/file/fs.c (get_atime_p): Updating of file access times
